--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,19 +4,26 @@ body {
     font-family: 'Roboto', sans-serif;
   }
   
-  h1.title {
-    text-align: center;
-    color: black;
-    letter-spacing: 2px;
-  }
-  h1.todo-header {
-    background: #2980e9;
+  
+ .header {
+    background: black;
     color: white;
+    font-size: 50px;
+    font-weight: 400;
     margin: 0;
     padding: 10px 20px;
-    text-transform: uppercase;
-    font-size: 1.5em;
+    text-align: center;
+        
+  }
+   .footer {
+    background: black;
+    color: white;
+    font-size: 25px;
     font-weight: 400;
+    margin: 0;
+    padding: 10px 20px;
+    text-align: center;
+        
   }
   
   div#container {
@@ -25,6 +32,10 @@ body {
     border: 2px solid skyblue;
     background: #f7f7f7;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+  }
+
+  i{
+    color:red;
   }
   
   ul {
@@ -35,15 +46,15 @@ body {
   }
   
   li {
-    background: #fff;
+    background: gray;
     padding-left: 10px;
     line-height: 2em;
     margin: 0;
-    color: #666;
+    color: white;
   }
   
-  li:nth-child(2n) {
-    background: #f7f7f7;
+  li:nth-child(2n) { /* Cada dos saltos de línea se pinte de este color  */
+    background: #3a3535;
   }
   
   li.clicked {
@@ -53,11 +64,11 @@ body {
   
   input.addToDo {
     font-size: 18px;
-    color: #2980b9;
-    background: #B7EEFF;
+    color: black;
+    background: whitesmoke;
     border: none;
     width: 100%;
-    padding: 10px 10px 10px 20px;
+    padding: 15px;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-border-box: border-box;
@@ -75,21 +86,18 @@ body {
   }
   
   span {
-    background: tomato;
-    height: 35px;
-    width: 0;
+   
     margin-right: 10px;
     margin-left: -10px;
     text-align: center;
-    display: inline-block;
-    color: white;
-    opacity: 0;
-    transition: .2s linear;
+    display: inline-block; /*Para que ocupe el cuadro del span y siga en línea el label*/
+    opacity: 0; /* Nivel de opacidad, para que quede oculto debajo del label*/
+    transition: .2s linear; /*Efecto de aparición*/
     
     
   }
   
-  li:hover span {
+  li:hover span { /* Al posicionar mouse */
     opacity: 1.0;
     width: 40px;
   }
